[gd_scene load_steps=19 format=3 uid="uid://pbx3yyeycbbm"]

[ext_resource type="Texture2D" uid="uid://c2liqdst354bp" path="res://Assest/Deco/water_a_8frames.png" id="1_5fgrj"]
[ext_resource type="Texture2D" uid="uid://bv6nqqbpmqn72" path="res://Assest/Tilesets/tileset_forest.png" id="1_5tcib"]
[ext_resource type="Texture2D" uid="uid://5tryr5vbdwc6" path="res://Assest/Backgrounds/trees.png" id="2_3csuq"]
[ext_resource type="PackedScene" uid="uid://btoflxcmii4vt" path="res://Scenes/Player.tscn" id="2_cdlj1"]
[ext_resource type="Texture2D" uid="uid://c2fg8ydktubhi" path="res://Assest/Deco/clouds.png" id="4_bjd45"]
[ext_resource type="PackedScene" uid="uid://dhfdlf0f0opkb" path="res://Scenes/Coin.tscn" id="6_noadn"]
[ext_resource type="Script" path="res://Scripts/CanvasLayer.gd" id="7_5bcos"]
[ext_resource type="Texture2D" uid="uid://dglfowqdjfecw" path="res://Assest/Objects/coin_gold.png" id="7_6e4b2"]
[ext_resource type="Script" path="res://Scripts/DeathZone.gd" id="9_03ylm"]
[ext_resource type="Texture2D" uid="uid://dkwvndohe3nld" path="res://Assest/UI/hearts.png" id="9_jehpk"]
[ext_resource type="PackedScene" uid="uid://ci0hpl8126578" path="res://Scenes/PauseMenu.tscn" id="9_oc5n7"]
[ext_resource type="Texture2D" uid="uid://b8jeuvnmmygiy" path="res://Assest/Enemies/spikes.png" id="10_8rdmg"]
[ext_resource type="PackedScene" uid="uid://cehho1kc4exyy" path="res://Scenes/Saw.tscn" id="11_ckiu0"]
[ext_resource type="PackedScene" uid="uid://cvhkcufiehq41" path="res://Scenes/Enemy.tscn" id="12_l6hwk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kn0hu"]
texture = ExtResource("1_5tcib")
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dnkse"]
texture = ExtResource("4_bjd45")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_v28v5"]
physics_layer_0/collision_layer = 5
sources/0 = SubResource("TileSetAtlasSource_kn0hu")
sources/1 = SubResource("TileSetAtlasSource_dnkse")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bcmox"]
a = Vector2(622, 4)
b = Vector2(-89, 4)

[node name="World1" type="Node2D"]

[node name="Sky" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(330.001, 171.5)
scale = Vector2(2.57813, 8.59375)
texture = ExtResource("1_5fgrj")

[node name="Trees" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(128.001, 246)
texture = ExtResource("2_3csuq")

[node name="Trees2" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(384.001, 246)
texture = ExtResource("2_3csuq")

[node name="Trees3" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(640.001, 246)
texture = ExtResource("2_3csuq")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(22.0006, 155)
tile_set = SubResource("TileSet_v28v5")
format = 2
layer_0/tile_data = PackedInt32Array(524300, 524288, 3, 524301, 655360, 3, 524304, 524288, 3, 524305, 589824, 3, 524306, 655360, 3, 524309, 524288, 3, 524310, 589824, 3, 524311, 655360, 3, 524314, 655360, 3, 393243, 524288, 3, 393244, 589824, 3, 393245, 655360, 3, 196638, 524288, 3, 196639, 589824, 3, 196640, 655360, 3, 393219, 524288, 3, 393220, 589824, 3, 393221, 655360, 3, 196608, 524288, 3, 196609, 589824, 3, 196610, 655360, 3, 131082, 1, 2, 131083, 65537, 2, 131084, 131073, 2, 131085, 196609, 2, 131091, 1, 2, 131092, 65537, 2, 131093, 131073, 2, 131094, 196609, 2, 196622, 1, 1, 196623, 65537, 1, 196624, 131073, 1, 65552, 1, 1, 65553, 65537, 1, 65554, 131073, 1, 196614, 1, 1, 196615, 65537, 1, 196616, 131073, 1, 65542, 1, 0, 65543, 65537, 0, 65544, 131073, 0, 65545, 196609, 0, 11, 1, 0, 12, 65537, 0, 13, 131073, 0, 14, 196609, 0, 21, 1, 0, 22, 65537, 0, 23, 131073, 0, 24, 196609, 0, 262163, 1, 0, 262164, 65537, 0, 262165, 131073, 0, 262166, 196609, 0, 524298, 655360, 3, 524297, 589824, 3, 524296, 524288, 3)

[node name="Player" parent="." instance=ExtResource("2_cdlj1")]
position = Vector2(180.001, 275)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true

[node name="Coin" parent="." instance=ExtResource("6_noadn")]
position = Vector2(148.001, 263)

[node name="Coin2" parent="." instance=ExtResource("6_noadn")]
position = Vector2(332.001, 235)

[node name="Coin3" parent="." instance=ExtResource("6_noadn")]
position = Vector2(407.001, 261)

[node name="Coin4" parent="." instance=ExtResource("6_noadn")]
position = Vector2(225.001, 236)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("7_5bcos")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(12.25, 13)
texture = ExtResource("7_6e4b2")
hframes = 8

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 19.25
offset_right = 70.25
offset_bottom = 26.0
text = ":"

[node name="CoinsCollectedText" type="Label" parent="CanvasLayer"]
offset_left = 24.25
offset_top = 1.0
offset_right = 64.25
offset_bottom = 27.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Heart1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(52, 12.6667)
texture = ExtResource("9_jehpk")
hframes = 4

[node name="Heart2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(70.3333, 12.6667)
texture = ExtResource("9_jehpk")
hframes = 4

[node name="Heart3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(88.3333, 12.6667)
texture = ExtResource("9_jehpk")
hframes = 4

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("9_oc5n7")]
offset_right = -533.0
offset_bottom = -266.0

[node name="Ground" type="Area2D" parent="."]
position = Vector2(15.0006, 306)
script = ExtResource("9_03ylm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("SegmentShape2D_bcmox")

[node name="Spikes" type="Area2D" parent="."]
position = Vector2(344, 182)

[node name="Sprite2D" type="Sprite2D" parent="Spikes"]
position = Vector2(136, 60)
texture = ExtResource("10_8rdmg")
hframes = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Spikes"]
position = Vector2(136, 60)
polygon = PackedVector2Array(-8, 8, -8, 4, -4, -5, -3, -5, 0, 1, 3, -5, 4, -5, 8, 4, 8, 8)

[node name="Saw" parent="." instance=ExtResource("11_ckiu0")]
position = Vector2(61, 234)

[node name="Enemy" parent="." instance=ExtResource("12_l6hwk")]
position = Vector2(302, 275)

[connection signal="body_entered" from="Ground" to="Ground" method="_on_body_entered"]
[connection signal="body_entered" from="Spikes" to="Player" method="_on_spikes_body_entered"]
